-
Bug
-
Resolution: Done
-
Not Evaluated
-
5.5.1
-
None
-
-
94eb599b6995f8b8e6a132d553620f891e138129
Windows camera frame video buffer is reused and singleton in camera video render control. The instance life is rely on reference counter. It is deleted improperly in some cases because of reference counter is set to 0 and cause crashes.
How to reproduce:
a, Camera application crashes after taking few photes on Lumia 1520
b, switch front and back camera crashes